@@ -87,9 +87,6 @@ class PostgresConnection(DBAPI):
         self.unicodeCols = unicodeCols
         DBAPI.__init__(self, **kw)
 
-        # Server version cache
-        self._server_version = None # Not yet initialized
-
     def connectionFromURI(cls, uri):
         user, password, host, port, path, args = cls._parseURI(uri)
         path = path.strip('/')
@@ -160,8 +157,6 @@ class PostgresConnection(DBAPI):
         return '%s %s PRIMARY KEY' % (soClass.sqlmeta.idName, key_type)
 
     def dropTable(self, tableName, cascade=False):
-        if self.server_version[:3] <= "7.2":
-            cascade=False
         self.query("DROP TABLE %s %s" % (tableName,
                                          cascade and 'CASCADE' or ''))
 
@@ -296,15 +291,6 @@ class PostgresConnection(DBAPI):
             elif defaultstr == 'true':
                 return True
         return getattr(sqlbuilder.const, defaultstr)
-
-    def server_version(self):
-        if self._server_version is None:
-            # The result is something like
-            # ' PostgreSQL 7.2.1 on i686-pc-linux-gnu, compiled by GCC 2.95.4'
-            server_version = self.queryOne("SELECT version()")[0]
-            self._server_version = server_version.split()[1]
-        return self._server_version
-    server_version = property(server_version)
 
     def createEmptyDatabase(self):
         # We have to connect to *some* database, so we'll connect to
